<resources>
    <string name="app_name">Math Tilt</string>
    <string name="toolbar_main">Math Tilt</string>
    <string name="lets_play">Let\'s Play!</string>
    <string name="main_activity_sub_title">Select the category you want to advance!</string>
    <string name="addition_text">Addition</string>
    <string name="subtraction_text">Subtraction</string>
    <string name="multiplication_text">Multiplication</string>
    <string name="division_text">Division</string>
    <string name="level_text">Level</string>
    <string name="points_text">Points</string>
    <string name="time_text">Time</string>
    <string name="question_text">Question</string>
    <string name="time_is_up_text">Time Is Up!</string>
    <string name="choose_a_level_text">Choose a Level</string>
    <string name="and_start_math_fun_text">and start math fun!</string>
    <string name="you_have_to_complete_other_levels">You have to complete other levels first!</string>
    <string name="level_complete_text">Level Complete!</string>
    <string name="now_you_can_move_on_to_the_next_level">Now you can move on to the next level!</string>
    <string name="ok_text">OK</string>
    <string name="button_home">Home</string>
    <string name="go_text">GO!</string>
    <string name="doYouWantToExitText">Do you want to exit?</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_us">Share Us!</string>
    <string name="congragulations_level_up">Congratulations! You have level up</string>
    <string name="fun_of_text">fun of</string>
    <string name="MATHS_text">MATHS</string>
    <string name="have_fun_with_numbers_text">HAVE FUN WITH NUMBERS</string>
    <string name="tutorial_first">Choose a category and complete the levels one by one</string>
    <string name="tutorial_second_text">Answer the questions correctly in time and level up by completing 70 points</string>
    <string name="no_problem_watch_video">No problem, you can go to the next level by watching this short video.</string>
    <string name="watch_it_text">Watch it?</string>
    <string name="game_act_ad_id" translatable="false">ca-app-pub-7470209600285562/1000037545</string>
    <string name="main_act_banner_id" translatable="false">ca-app-pub-7470209600285562/2313119219</string>
    <string name="select_level_banner_id" translatable="false">ca-app-pub-7470209600285562/1024088272</string>
    <string name="restart">Restart</string>
    <string name="game_act_reward_ad_id" translatable="false">ca-app-pub-7470209600285562/4672716912</string>
    <string name="addition_interstitial_ad_id" translatable="false">ca-app-pub-7470209600285562/9447600676</string>
</resources>