<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".GameActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="510dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/chart_level_points"
        app:layout_constraintStart_toEndOf="@+id/imgGameABack"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_points" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/kurislandregular"
            android:text="@string/points_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/kurislandregular"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="490dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="244dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chart_time_guestion" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="244dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chart_time_guestion" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/kurislandregular"
            android:text="30"
            android:textColor="@color/game_time_color"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8" />

        <TextView
            android:id="@+id/tvFlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/kurislandregular"
            android:text="1/10"
            android:textColor="@color/game_question_flow_color"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/kurislandregular"
            android:text="@string/time_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/kurislandregular"
            android:text="@string/question_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/questionCard"
        android:layout_width="610dp"
        android:layout_height="485dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#4B5FE2">

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:max="100"
                android:progress="100"/>

            <TextView
                android:id="@+id/tvQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kurislandregular"
                android:text="24"
                android:textColor="#FFFFFF"
                android:textSize="96sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/tvCalculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/kurislandlight"
                android:textColor="#fff"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="222dp"
                android:layout_height="111dp"
                android:background="@drawable/btn_home"
                android:fontFamily="@font/kurislandbold"
                android:onClick="homeClick"
                android:paddingTop="50dp"
                android:text="@string/button_home"
                android:textAllCaps="false"
                android:textSize="28sp"
                android:visibility="invisible"
                app:backgroundTint="@android:color/transparent"
                app:backgroundTintMode="src_atop"
                tools:layout_editor_absoluteX="194dp"
                tools:layout_editor_absoluteY="290dp" />

            <TextView
                android:id="@+id/tvUserSelectedNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:textColor="@color/activity_title_text"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCalculation" />

            <TextView
                android:id="@+id/text_operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="60sp"
                app:layout_constraintEnd_toEndOf="@+id/tvCalculationResult"
                app:layout_constraintTop_toBottomOf="@+id/tvCalculationResult"
                tools:text="+" />

            <TextView
                android:id="@+id/tvCalculationResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/correct_answer_button_text_color"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="@+id/tvUserSelectedNumbers"
                app:layout_constraintTop_toBottomOf="@+id/tvUserSelectedNumbers" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imgGameABack"
        android:layout_width="55dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:onClick="gameAcBackClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_restart"
        android:fontFamily="@font/kurislandbold"

        android:lineSpacingExtra="8sp"
        android:onClick="playAgain"
        android:paddingTop="70dp"
        android:text="Restart"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:visibility="invisible"
        app:backgroundTint="@android:color/transparent"
        app:backgroundTintMode="src_atop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/kurislandbold"
        android:text="@string/time_is_up_text"
        android:textColor="@color/activity_title_text"
        android:textSize="60sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSound"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:onClick="soundClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_music_turnon" />

    <ImageView
        android:id="@+id/btnShowAlertDialogForSensor"
        android:layout_width="186dp"
        android:layout_height="157dp"
        android:layout_marginBottom="32dp"
        android:onClick="showSensorDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/btn_correct_answer" />

    <TextView
        android:id="@+id/tvGetTheNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kurislandlight"
        android:text="Get the random number "
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnShowAlertDialogForSensor"
        app:layout_constraintEnd_toEndOf="@+id/btnShowAlertDialogForSensor"
        app:layout_constraintStart_toStartOf="@+id/btnShowAlertDialogForSensor"
        app:layout_constraintTop_toTopOf="@+id/btnShowAlertDialogForSensor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:onClick="extraNumbers"
        android:tag="3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/btn_ok" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="139dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:onClick="extraNumbers"
        android:tag="2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/btn_ok" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="139dp"
        android:layout_height="101dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="44dp"
        android:onClick="extraNumbers"
        android:tag="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/btn_ok" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kurislandregular"
        android:text="1"
        android:textColor="@color/game_time_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kurislandregular"
        android:text="3"
        android:textColor="@color/game_time_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kurislandregular"
        android:text="5"
        android:textColor="@color/game_time_color"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>